<resources>
    <string name="app_name">DATABASE_PROJECT_DATAENTRYOPERATOR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_product_size">enter the product size</string>
    <string name="product_size">Product size</string>
    <string name="product_name">Product name</string>
    <string name="enter_the_product_name">enter the product name</string>
    <string name="select_catagory">select catagory</string>
    <string name="select_company">select company</string>
    <string name="enter_a_catagory">Please type a catagory</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Action Bar</string>

    <string name="btn_send_message">Send Message</string>

    <!-- Activity titles -->
    <string name="locationSearchError">Adress cannot b empty. Please enter location Address  </string>

    <string name="activity_location_found">Location Found</string>

    <!-- Action Bar action items -->


    <string name="action_search">Sarch</string>

    <string name="action_location_found">Location Found</string>

    <string name="action_refresh">Refresh</string>

    <string name="action_contacts">Contacts</string>

    <string name="action_help">Help</string>

    <string name="action_check_updates">Check for Updates</string>

    <!-- Search -->


    <string name="search_hint">Search color..</string>
    <string name="show_order">Show Order</string>
    <string name="click_here_to_show_all_of_your_orders">click here to show all of your orders</string>
    <string name="show_shops">Show Shops</string>


    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>


    <!--navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="View_profile">View profile</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="other">Other</string>
    <string name="profile">Profile</string>
    <string name="name">Name :</string>
    <string name="dob">Date of Birth :</string>
    <string name="cnic">CNIC : </string>
    <string name="email">Email : </string>
    <string name="cell">Contact Number : </string>
    <string name="education">Education : </string>
    <string name="cancel">Cancel</string>
    <string name="save">Save </string>
    <string name="confirm_location">Confirm Location</string>
    <!--SharedPreferences.-->
    <string name="SharedPreferences_FileName">com.example.DataEntryOperator.profileData</string>
    <string name="SharedPreferences_DataEntryOperatorEmail">DataEntryOperatorEmail</string>
    <string name="SharedPreferences_DataEntryOperatorpassword">DataEntryOperatorPassword</string>
    <string name="SharedPreferences_isProfileDataComplete">isProfileDataComplete</string>

</resources>
