<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".Fragments.Adding_sku_fragment">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/sku_imgView_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/icons8_product_documents_128px" />


        <RelativeLayout
            android:id="@+id/adding_sku_rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sku_imgView_logo"
            android:visibility="gone">
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif-medium"
                android:text="SKU"

                android:textColor="@android:color/black"
                android:textSize="30sp" />


            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/select_company"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/sku_company_spinner"
                        android:layout_width="match_parent"
                        android:autofillHints="company"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:animateLayoutChanges="true"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:fontFamily="sans-serif-light"
                        android:text="@string/select_catagory"
                        android:layout_marginTop="10dp"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:layout_marginTop="10dp"
                        android:id="@+id/sku_catagory_spinner"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:animateLayoutChanges="true"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/enter_the_product_name"
                        android:layout_marginTop="10dp"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:layout_marginTop="10dp"
                        android:id="@+id/sku_product_edit_text"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textAlignment="center"
                        android:hint="@string/product_name"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/enter_the_product_size"
                        android:layout_marginTop="10dp"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:layout_marginTop="10dp"
                        android:inputType="numberDecimal"
                        android:id="@+id/sku_product_size_edit_text"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textAlignment="center"
                        android:hint="@string/product_size"
                        android:textColorHint="@android:color/white"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                </LinearLayout>



            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="Save"
                android:id="@+id/sku_save_button"

                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:id="@+id/adding_sku_bottom_rally2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:id="@+id/message_text_view"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adding_sku_rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone"
        android:layout_alignParentRight="true">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"

            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/back_btn_bg"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="Back"
            android:layout_below="@+id/my_progress_bar"
            android:layout_alignParentLeft="true"
            android:id="@+id/catagory_back"

            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
        <androidx.core.widget.ContentLoadingProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:id="@+id/my_progress_bar"
            android:indeterminateDrawable="@drawable/progress_bar_ring"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"

            android:layout_toRightOf="@+id/catagory_back"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/catagory_back"
            android:id="@+id/catagory_message_text_view"/>


    </RelativeLayout>
</RelativeLayout>